[gd_scene load_steps=11 format=3 uid="uid://d4k8r7hh7qfse"]

[ext_resource type="Script" path="res://levels/minigames/labs/LLM/llm_minigame.gd" id="1_llm"]
[ext_resource type="Texture2D" uid="uid://rswqwxp214s0" path="res://levels/minigames/labs/LLM/background.png" id="2_deep_seek"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_panel"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.184314, 0.184314, 0.184314, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.266667, 0.266667, 0.266667, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_pressed"]
bg_color = Color(0.145098, 0.145098, 0.145098, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.266667, 0.266667, 0.266667, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.184314, 0.184314, 0.184314, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.4, 0.4, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_disabled"]
bg_color = Color(0.184314, 0.184314, 0.184314, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.666667, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_button_focus"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_progress_bg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress_fill"]
bg_color = Color(0.301961, 0.419608, 0.996078, 1)

[node name="MinigameDeepSeek" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_llm")
quest_id = "lab_3"

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_deep_seek")
expand_mode = 1
stretch_mode = 5

[node name="GameTimerLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -157.0
offset_top = 20.0
offset_right = -37.0
offset_bottom = 52.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.533333, 0.533333, 0.533333, 1)
text = "00:00"

[node name="JustWords" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -317.0
offset_top = 19.0
offset_right = -163.0
offset_bottom = 51.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.533333, 0.533333, 0.533333, 1)
text = "Времени осталось:"

[node name="CenterContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InteractionArea" type="PanelContainer" parent="CenterContainer"]
layout_mode = 0
offset_left = 823.0
offset_top = 519.0
offset_right = 1523.0
offset_bottom = 639.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_panel")

[node name="InputButton" type="Button" parent="CenterContainer/InteractionArea"]
custom_minimum_size = Vector2(700, 120)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/disabled = SubResource("StyleBoxFlat_button_disabled")
theme_override_styles/focus = SubResource("StyleBoxEmpty_button_focus")
text = "   Сгенерировать отчёт"
alignment = 0

[node name="IconArrow" type="Label" parent="CenterContainer/InteractionArea/InputButton"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
text = "⬆"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer/InteractionArea/InputButton"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_progress_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_progress_fill")
show_percentage = false
